--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,17 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.SignUpActivity" />
         <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".ui.PerfilActivity"></activity>
+        <activity android:name=".ui.PerfilActivity" />
+        <activity
+            android:name=".ui.SucursalListadoActivity"
+            android:label="@string/title_activity_sucursal_listado"
+            android:parentActivityName=".ui.MainActivity"
+
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.adminneg.bussines.administrar.negocio.adminneg.ui.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
